# pixivutil-server

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.matrix.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-client.yml  publish-common.yml  publish-docker.yml  tests.yml
PixivServer/: app.py  auth.py  metrics.py  notifier.py  utils.py  worker.py
PixivServer/client/: notification.py
PixivServer/client/notification/: default.py  matrix.py
PixivServer/config/: celery.py  matrix.py  notification.py  pixivutil.py  rabbitmq.py  server.py  worker.py
PixivServer/model/: notification.py  pixivutil.py  subscription.py
PixivServer/models/: pixiv.py  pixiv_metadata.py  pixiv_worker.py
PixivServer/notification/: __init__.py  matrix.py
PixivServer/repository/: pixivutil.py  subscription.py
PixivServer/router/: __init__.py  download.py  health.py  metadata.py  notification.py  server.py  subscription.py
PixivServer/routers/: database.py  dev.py  dlq.py  download.py  download_queue.py  health.py  lanraragi.py  metadata.py  metadata_queue.py  metrics.py  server.py  subscription.py
PixivServer/service/: __init__.py  default.py  metrics.py  pixiv.py  subscription.py
PixivServer/utils/: file.py
PixivServer/worker/: __init__.py  common.py  dev.py  download.py  metadata.py  pixiv.py
PixivServerCommon/: README.md  pyproject.toml
PixivServerCommon/pixivutil_server_common/: __init__.py  models.py
PixivUtilClient/: README.md  pyproject.toml
PixivUtilClient/pixivutil_client/: __init__.py  client.py  exceptions.py  models.py
PixivUtilClient/tests/: test_client.py
docker/: Dockerfile  PixivServer.Dockerfile  entrypoint.sh
docs/: configuration.md  installation.md
docs/api/: database.md  dlq.md  download.md  health.md  metadata.md  server.md  subscription.md
integration_tests/: README.md  conftest.py  test_dlq_replay.py  test_queue_priority.py
nginx/: default.conf
rabbitmq/: rabbitmq.conf
tests/: conftest.py  test_auth.py  test_celery_config.py  test_models.py  test_utils.py
