[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pixivutil-server"
description = "Web server for PixivUtil2"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "psilabs-dev" }
]
version = "2.3.1"
dependencies = [
  "aiofiles>=25.1.0",
  "celery>=5.5.3",
  "fastapi>=0.122.0",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]

# Dependencies used by bundled PixivUtil2 module
pixivutil2 = [
  "beautifulsoup4>=4.9.3",
  "certifi>=2021.5.30",
  "demjson3>=3.0.0",
  "mechanize>=0.4.5",
  "Pillow>=8.3.0",
  "PySocks>=1.7.1",
  "colorama>=0.4.4",
  "cloudscraper>=1.2.58",
  "curl_cffi>=0.11.3"
]

dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.ruff]
exclude = [
  "PixivUtil2/*"
]

[tool.uv.build-backend]
module-name = "PixivServer"
module-root = ""
