[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pixivutil-server-client"
version = "0.1.0"
description = "Async aiohttp client SDK for PixivUtil Server"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "psilabs-dev" }
]
dependencies = [
    "aiohttp>=3.13.3",
    "pydantic>=2.12.4",
    "pixivutil-server-common>=0.1.0",
]

[tool.uv.build-backend]
module-name = "pixivutil_client"
module-root = ""

[tool.uv.sources]
pixivutil-server-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
